src/test/ui/consts/const-call.stderr
error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/const-call.rs:6:17
   |
LL |     let _ = [0; f(2)];
   |                 ^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0015`.
